# LittleEnum

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: little_enum.hpp  mini_testing_framework.hpp
src/: sample_script.cpp  unit_test.cpp
